[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
dynamic = ["version", "description"]
name = "livereload"
readme = "README.rst"

dependencies = ["tornado"]
license = { file = "LICENSE" }

authors = [
  {name = "Hsiaoming Yang", email = "me@lepture.com"}
]
maintainers = [
  {name = "Pradyun Gedam", email = "mail@pradyunsg.me"}
]

classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Environment :: Web Environment :: Mozilla",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: BSD License",
  "Natural Language :: English",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python",
  "Programming Language :: Python :: 2",
  "Programming Language :: Python :: 2.7",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.5",
  "Programming Language :: Python :: 3.6",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Topic :: Software Development :: Build Tools",
  "Topic :: Software Development :: Compilers",
  "Topic :: Software Development :: Debuggers",
]

[project.urls]
Home = "https://github.com/lepture/python-livereload"

[project.scripts]
livereload = "livereload.cli:main"
