[project]
name = "livereload"
description = "Create a livereload server for static generators, WSGI, and ASGI."
authors = [{name = "Hsiaoming Yang", email="me@lepture.com"}]
dependencies = [
  "click",
  "starlette",
  "uvicorn",
  "watchfiles",
]
license = {text = "BSD-3-Clause"}
requires-python = ">=3.8"
dynamic = ["version"]
readme = "README.rst"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Environment :: Web Environment",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: BSD License",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Build Tools",
  "Topic :: Software Development :: Compilers",
  "Topic :: Software Development :: Debuggers",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]

[project.scripts]
livereload = "livereload.cli:main"

[project.urls]
Documentation = "https://livereload.lepture.com/"
Donate = "https://github.com/sponsors/lepture"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "livereload.__version__"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"livereload" = ["py.typed"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
filterwarnings = ["error"]

[tool.coverage.run]
branch = true
source = ["livereload"]

[tool.coverage.paths]
source = ["src"]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "raise NotImplementedError",
  "@(abc\\.)?abstractmethod",
]

[tool.mypy]
strict = true
python_version = "3.8"
files = ["src/livereload"]
show_error_codes = true
pretty = true
